# btrwin

./: .btrwinrc  .gitignore  .project  AbletonLive10Suite_installer.py  MSOffice2010-Excel.py  MSOffice2019_Winetricks.py  README.md  __init__.py  __main__.py  betterwin.epj  btrwin.epj  btrwin.py  compile.py  create.py  debug.py  dev.py  dynln.py  main.py  pyproject.toml  requirements.txt  setup.py  shelltest.sh  test.py
.eric7project/: TimeTracker.ttj  btrwin.eqj  btrwin.esj  btrwin.etj  project-apis.db
.jedi/: project.json
MSOffice2010-Excel.build/: __constants.const  module.__main__.c  module.__main__.const  scons-report.txt
assets/: __init__.py  pfx.dir
btrfs/: __init__.py  __main__.py  btrfsctl.py
btrfsctl/: __init__.py  __main__.py
btrwin.egg-info/: PKG-INFO  SOURCES.txt
btrwin.py/: __main__.py
cli/: __init__.py
common/: exec.py
conf/: __init__.py  __main__.py  conf_base.py  confctl.py  ctl.py  init.py  pfx.py
confctl/: __init__.py  __main__.py  conf_base.py  confctl.py  init.py
configure/: Q.py  __init__.py  __main__.py  cli.py  created.sh  tst.py
dev/: __init__.py
dynln.build/: module.__main__.c  module.__main__.const  scons-report.txt
exec/: AbletonLive10Suite_installer.py  Ableton_Live11.py  FooDaw2000.py  MSOffice2010_WINWORD.py  MSOffice2019_Winetricks.py
fnx/: __init__.py
fs/: __init__.py  btrfs.py  fsctl.py
fsctl/: btrfsctl.py  fsctl.py
lib/: ANSI.py  ANSI_markup.py  ANSI_table.py  __init__.py  conf.py  created.sh  dev.py  fs.py  fs_btrfs.py  func.py  path.py  term.py
loader/: __init__.py  __main__.py
old/: bin.py  (+1 more)
(+223 files in other folders)
