[tool.poetry]
name = "btrwin"
version = "0.1.0"
description = ""
authors = ["Hoefkens Jeroen <hoefkens.j@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.0.3"
btrfs = "^13"
colorama = "^0.4.4"
ansitable = "^0.9.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
